# sample-agent-omnimesh

./: .gitignore  CONTRIBUTING.md  README.md  __init__.py  bring_your_own_agent.md  config.yaml  pyproject.toml  requirements_streamlit.txt  streamlit_app.py
agents/: __init__.py  utils.py
agents/agent_gateway/: README.md  __init__.py  create_gateway.py  setup_gateway.yaml  utils.py
agents/agent_gateway/agent_specifications/: Default.yaml  database_agent.yaml  development_tools_agent.yaml  infrastructure_agent.yaml
agents/agent_gateway/gateway_idp/: __init__.py  setup_cognito_gateway_inbound.py
agents/agent_idp/: README.md  __init__.py  setup_cognito.py
agents/agent_mapping/: README.md  __init__.py  plug_in_mapping.yaml  user_agent_table.py
agents/orchestrator/: config.yaml  config_yaml.template.md  constants.py  memory_utils.py  orchestrator_agent.py  requirements.txt  response_types.py  streamlit_app.py  utils.py
agents/orchestrator/agent_prompts/: orchestrator_agent_system_prompt.txt
agents/orchestrator/orchestrator_flow_diagrams/: runtime.md  user_with_context_flow.md  user_without_product_context.md
agents/sub_agents/: README.md  __init__.py
agents/sub_agents/database_agent/: config.yaml  database_agent.py  response_types.py  utils.py
agents/sub_agents/development_tools_agent/: config.yaml  development_tools_agent.py  response_types.py  utils.py
agents/sub_agents/infrastructure_agent/: README.md  config.yaml  infrastructure_agent.py  response_types.py  utils.py
agents/sub_agents/service_desk_agent/: __init__.py  config.yaml  requirements.txt  (+2 more)
(+4 files in other folders)
