[project]
name = "enterprise-it-multi-agent-system"
version = "0.1.0"
description = "Multi-agent system for enterprise IT support using Amazon Bedrock AgentCore and Strands"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "opensearch-py",
    "boto3",
    "botocore",
    "watchdog",
    "jsonschema",
    "retrying",
    "strands-agents",
    "strands-agents-tools",
    "langchain-core",
    "langchain-aws",
    "zmq>=0.0.0",
    "aws-cdk-lib>=2.208.0",
    "constructs>=10.4.2",
    "python-dotenv>=1.1.1",
    "bedrock-agentcore",
    "bedrock-agentcore-starter-toolkit",
    "opentelemetry-instrumentation>=0.57b0",
    "opentelemetry-api>=1.36.0",
    "langchain>=0.3.27",
    "langgraph>=0.6.4",
    "fuzzywuzzy>=0.18.0",
    "scikit-learn>=1.7.1",
    "pyyaml>=6.0.2",
    "langchain-community>=0.3.29",
    "streamlit>=1.50.0",
]
